vault-k8s-secrets/cert-manager/gke/weather-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: gcr.io/container-secrets/weather:latest
        imagePullPolicy: Always
        name: weather
        ports:
        - containerPort: 8080
