vault-k8s-secrets/cert-manager/gke/weather-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: weather
