vault-k8s-secrets/cert-manager/gke/weather-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #certmanager.k8s.io/issuer: "letsencrypt-staging"
    #certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - gke.weather.weirdscience.labs.arctiq.ca
    secretName: weather-tls
  rules:
  - host: gke.weather.weirdscience.labs.arctiq.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: weather
          servicePort: 80
